--- a/MPP/MPP.csproj
+++ b/MPP/MPP.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MPP_Deportista.cs" />
     <Compile Include="MPP_Ejercicio.cs" />
     <Compile Include="MPP_Entrenador.cs" />
+    <Compile Include="MPP_Login.cs" />
     <Compile Include="MPP_Rutina.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
